@@ -36,3 +36,6 @@ code expansion, unimplemented at the moment.
 Should maybe better be done in Perl I think.
 
 - We do not actually support variables (e.g. "variable=value command"). There's only builtin support for modifying and interpolating env variables.
+
+BUGS
+- Expansion is not fully recursive. Things like "var=(${var2})" do not work, also using $&functions() within $&functions() should really work.
